--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+#rustls = "0.17.0"
+#webpki = "0.21.3"
+#webpki-roots = "0.19.0"
