--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 float_eq = "0.3.1"
+image = "0.23.4"
 #rustls = "0.17.0"
 #webpki = "0.21.3"
 #webpki-roots = "0.19.0"
