--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,6 @@
 [workspace]
-#members = ["unnamed_protocol_client", "unnamed_protocol_server"]
-members = ["client", "server"]
+members = [
+    "client",
+    "server",
+    "library",
+]
