--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "unnamed_protocol_server"
+name = "froggi-server"
 version = "0.1.0"
 authors = ["Zack <zphixon@gmail.com>"]
 edition = "2018"
@@ -7,6 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#rustls = "0.17.0"
-#webpki = "0.21.3"
-#webpki-roots = "0.19.0"
+froggi = { path = "../library" }
