start making client gui
definitely needs some refactoring :^)

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-froggi = { path = "../library" }
+froggi = { path = "../library", features = ["layout"] }
 image = "0.23.4"
+druid = "0.6.0"
