--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,6 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-froggi = { path = "../library", features = ["layout"] }
+froggi = { path = "../library" }
 image = "0.23.4"
-druid = "0.6.0"
