--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,3 +9,7 @@ edition = "2018"
 [dependencies]
 froggi = { path = "../library" }
 image = "0.23.14"
+
+[[bin]]
+name = 'simple_client'
+path = 'simple_client.rs'
