--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -14,3 +14,8 @@ image = "0.23.14"
 name = 'simple_client'
 path = 'simple_client.rs'
 test = false
+
+[[bin]]
+name = 'many_clients'
+path = 'many_clients.rs'
+test = false
