--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -11,11 +11,11 @@ froggi = { path = "../library" }
 image = "0.23.14"
 
 [[bin]]
-name = 'simple_client'
-path = 'simple_client.rs'
+name = 'simple-client'
+path = 'simple-client.rs'
 test = false
 
 [[bin]]
-name = 'many_clients'
-path = 'many_clients.rs'
+name = 'many-clients'
+path = 'many-clients.rs'
 test = false
