--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -20,3 +20,8 @@ test = false
 name = 'many-clients'
 path = 'many-clients.rs'
 test = false
+
+[[bin]]
+name = 'render-text'
+path = 'render-text.rs'
+test = false
