--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 froggi = { path = "../library" }
 image = "0.23.14"
 fontdue = '0.5.0'
+druid = "0.7.0"
 
 [[bin]]
 name = 'simple-client'
@@ -24,4 +25,9 @@ test = false
 [[bin]]
 name = 'render-text'
 path = 'render-text.rs'
+test = false
+
+[[bin]]
+name = 'druid-test'
+path = 'druid-test.rs'
 test = false
