--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 froggi = { path = "../library" }
 druid = "0.7.0"
+image = '0.23.14'
 
 [[bin]]
 name = 'simple-client'
